<resources>
    <string name="app_name">CalculatorAppRamalingame</string>
    <string name="calculator">Calculator</string>
    <string name="add">Add</string>
    <string name="divide">Divide</string>
    <string name="subtract">Subtract</string>
    <string name="exponent">Exponent</string>
    <string name="multiply">Multiply</string>
    <string name="integer_division">Integer Division</string>
    <string name="addition">Addition</string>
    <string name="multiple_operations">Multiple Operations</string>
    <string name="calculatorTitleId">Calculator</string>
    <string name="plus">+</string>
    <string name="subtractsign">-</string>
    <string name="multiplySign">x</string>
    <string name="dividesign">/</string>
    <string name="plussign">+</string>
    <string name="clearbuttin">Clear</string>
    <string name="equaltobutton">=</string>
    <string name="percentagetext">%</string>
    <string name="dottext">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="times">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pie">π</string>
</resources>